--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,32 @@ body {
   cursor: pointer;
   font-size: 16px;
 }
+.split {
+  background-color: #3710e7; /* Green */
+  border: none;
+  color: white;
+  border: 2px solid black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  margin-right: 10px;
+  font-size: 16px;
+}
+.dd {
+  background-color: #d6c80a; /* Green */
+  border: none;
+  color: white;
+  border: 2px solid black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin-right: 10px;
+  cursor: pointer;
+  font-size: 16px;
+}
 
 .deal {
   background-color: #7a0ad6; /* Green */
