--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,12 @@ body {
   font-size: 16px;
 }
 
+.blackjack {
+  text-align: center;
+  color: rgb(224, 121, 24);
+  font-size: 30px;
+}
+
 .deal {
   background-color: #7a0ad6; /* Green */
   border: none;
